# praktikum

./: .gitignore  docker-compose.yml  fabfile.py
admin/: Dockerfile  pyproject.toml
admin/admin/: __init__.py  admin.py  database.py
admin/etl/: etl.py  pipes.py  state.py  stores.py
admin/migrations/versions/: 82669ff31369_.py  dce20e027f0d_.py
admin/movies/: admin.py  models.py
admin/schema/: create_indexes.sql  create_schema.sql
etl/: __main__.py  dbmigration.py  pipelines.py  pyproject.toml
fulltextsearch/: Dockerfile  pyproject.toml
fulltextsearch/fulltextsearch/: __init__.py  elastic.json  elastic.py
fulltextsearch/movies/: __init__.py  forms.py  resources.py  schemas.py
