[tool.poetry]
name = "praktikum_admin"
version = "0.1.0"
description = ""
authors = ["Anton Petrov <marblemonolit@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.7"
Flask = "^1.1.2"
Flask-SQLAlchemy = "^2.4.4"
Flask-Migrate = "^2.7.0"
Flask-Admin = "^1.5.7"
Flask-Login = "^0.5.0"
Flask-Babel = "^2.0.0"
psycopg2-binary = "^2.8.6"
click = "^7.1.2"

[tool.poetry.dev-dependencies]
pytest = "^6.2.2"
coverage = "^5.5"
ipdb = "^0.13.4"
flask-shell-ipython = "^0.4.1"
pytest-cov = "^2.11.1"
Faker = "^6.6.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
