[tool.poetry]
name = "praktikum"
version = "0.1.0"
description = ""
authors = ["Anton Petrov <marblemonolit@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.7"
elasticsearch = "^7.10.1"
Flask = "^1.1.2"
click = "^7.1.2"
Flask-Elasticsearch = "^0.2.5"

[tool.poetry.dev-dependencies]
ipdb = "^0.13.4"
flask-shell-ipython = "^0.4.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
